fix:fix grid alignement by adding util class

--- a/src/components/grid.css
+++ b/src/components/grid.css
@@ -3,9 +3,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto;
-  justify-items: center;
-  align-items: center;
-  gap: 0.5rem;
+  gap: 1rem;
 }
 
 .span-2 {
@@ -24,18 +22,19 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto;
-  justify-items: center;
-  align-items: center;
-  gap: 0.5rem;
+  gap: 1rem;
 }
 
 .grid-component-stacked {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto;
+  gap: 1rem;
+}
+
+.grid-center {
   justify-items: center;
   align-items: center;
-  gap: 0.5rem;
 }
 
 @media (max-width: 600px) {
